--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto:wght@500;700&display=swap');
 :root {
     --button: #FF0000;
     --main-background: #C4C4C4;
@@ -19,20 +20,17 @@ a, li{
 }
 
 body{
-    background-color: darkkhaki;
     width: 100%;
-    height: 100vh;
     font-family: "Roboto", sans-serif;
+    background: linear-gradient(to right, #ffffff 40%, #C4C4C4 40%);
 }
 
+
 #container {
-    background-color: darkcyan;
     width: 100%;
-    height: 100vh;
 }
 
 #navbar {
-    background-color: darkgray;
     width: 92%;
     height: 3rem;
     margin: 39px auto 0;
@@ -42,11 +40,11 @@ body{
 }
 
 #navbar .linksContainer{
-    
     width: 60%;
     height: 100%;
     margin: 0 5.125rem 0 7.125rem;
 }
+
 #navbar .linksContainer ul{
     height: 100%;
     display: flex;
@@ -83,35 +81,125 @@ body{
 }
 
 #mainContainer{
-    background-color: darkgreen;
     width: 100%;
-    height: 100%;
+    height: 73.72vh;
     display: flex;
     justify-content: space-between;
 }
 
 #mainContainer .ctaSection{
-    background-color: darkmagenta;
-    width: 47.5%;
-    padding: 6.438rem 4.5rem 11.938rem 6.938rem;
+    width: 40%;
+    padding: 6.438rem 4.5rem 11.938rem 12rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 #mainContainer .ctaSection h1{
-    width: 22.313rem;
-    font-size: 3.75rem;
+    width: 23.438rem;
+    height: 17rem;
+    font-size: 60px;
     font-weight: 700;
+    line-height: normal;
+    font-style: normal;
+    flex-shrink: 0;
 }
 
 #mainContainer .ctaSection p{
+    width: 21.375rem;
     font-size: 1rem;
     font-weight: 700;
     color: var(--text-description);
+    margin: 1.313rem 0;
+    line-height: normal;
 }
 
+#mainContainer .ctaSection span{
+    font-size: 2.5rem;
+    font-weight: bold;
+    margin-bottom: 1.875rem;
+}
+
+#mainContainer .ctaSection button{
+    width: 17.125rem;
+    height: 5.625rem;
+    background-color: var(--button);
+    color: rgba(255, 255, 255);
+    border: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 1.5rem;
+}
 
 #mainContainer .pictureSection{
-    background-color: greenyellow;
-    width: 62.5%;
-    height: 100%;
+    width: 60%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
+#mainContainer .pictureSection .smallerPictures{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 2.5rem;
+}
+
+#mainContainer .pictureSection .mainPicture{
+    width: 597px;
+    height: 510px;
+}
+
+#mainContainer .pictureSection .smallerPictures img{
+    width: 270px;
+    height: 183px;
+}
+
+#mainContainer .pictureSection .smallerPictures img:hover{
+    border-bottom: 5px solid var(--button);
+}
+
+#mediaLinksContainer{
+    width: 100%;
+    height: 10.375rem;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255);
+}
+
+#mediaLinksContainer .socialMediaLinks{
+    width: 100%;
+    height: 100%;
+}
+
+#mediaLinksContainer .socialMediaLinks ul{
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    
+}
+
+#mediaLinksContainer .socialMediaLinks a{
+    font-size: 1.25rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: var(--text);
+}
+
+#mediaLinksContainer .moreButton{
+    width: 27.313rem;
+    background-color: var(--footer);
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .875rem
+}
+
+#mediaLinksContainer .moreButton a{
+    color: rgba(255, 255, 255);
 }
